@@ -31,6 +31,7 @@ where XXXXXX is the bug number as listed below.
 335440  arm64: ld1 (single structure) is not implemented
 335713  arm64: unhanded instruction: prfm (immediate)
 338731  ppc: Fix testuite build for toolchains not supporting -maltivec
+338995  shmat with hugepages (SHM_HUGETLB) fails with EINVAL
 339020  ppc64: memcheck/tests/ppc64/power_ISA2_05 failing in nightly build
 339156  gdbsrv not called for fatal signal
 339442  Fix testsuite build failure on OS X 10.9
